# gitoteko

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: adding_new_rules.md  implementation-plan.md  prompt.md  sonar_execution_guide.md
docs/llms/: 10_sonar_scanner_adapter_and_action.md  11_cli_action_toggles_and_composition.md  12_logging_error_policy_and_summary.md  13_manual_validation_guide.md  14_semi_automation_preparation.md  15_sonar_execution_pacing_and_wait_mode.md  16_readme_operator_guide_refresh.md  17_docs_contract_consistency_cleanup.md  18_sonar_skip_unchanged_and_rule_authoring.md  5_shell_git_client_adapter.md  6_git_workspace_scanner_use_case.md  7_language_detection_action.md  8_csv_report_action.md  9_sonar_properties_generation_action.md  cli_env_fallback_and_single_repo_filter.md  cli_runtime_wiring_bitbucket_dry_run.md  implementation-plan.md  logging_and_git_pull_diagnostics.md  prompt.md  sonar_boundary_refactor.md
src/git_workspace_tool/: __init__.py  __main__.py  logging_utils.py
src/git_workspace_tool/adapters/filesystem/: local_filesystem.py
src/git_workspace_tool/adapters/git_client/: __init__.py  shell_git_client.py
src/git_workspace_tool/adapters/git_providers/: bitbucket_cloud.py
src/git_workspace_tool/cli/: config.py  main.py
src/git_workspace_tool/domain/: __init__.py  actions.py  entities.py  ports.py
src/git_workspace_tool/rules/: __init__.py  language_detection.py  language_report_csv.py  sonar_properties.py  sonar_runtime.py  sonar_scan.py
(+3 files in other folders)
